ADD: meta, images

--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Visual Vocabulary ft. Vega</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <meta name="description" content="There are so many ways to visualise data – how do we know which one to pick? Click on the coloured categories below to decide which data relationship is most important in your story, then look at the different types of chart within the category to form some initial ideas about what might work best. This list is not meant to be exhaustive, nor a wizard, but is a useful starting point for making informative and meaningful data visualisations">
+  <!-- Twitter card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@gramener">
+  <meta name="twitter:creator" content="@PratapVardhan">
+  <meta name="twitter:url" content="https://gramener.github.io/visual-vocabulary-vega/">
+  <meta name="twitter:title" content="Visual Vocabulary - Vega Edition">
+  <meta name="twitter:description" content="There are so many ways to visualise data – how do we know which one to pick? Click on the coloured categories below to decide which data relationship is most important in your story, then look at the different types of chart within the category to form some initial ideas about what might work best. This list is not meant to be exhaustive, nor a wizard, but is a useful starting point for making informative and meaningful data visualisations">
+  <meta name="twitter:image" content="https://gramener.github.io/visual-vocabulary-vega/assets/full-mix.png">
+  <!--facebook open graph-->
+  <meta property="og:title" content="Visual Vocabulary - Vega Edition">
+  <meta property="og:url" content="https://gramener.github.io/visual-vocabulary-vega/">
+  <meta property="og:description" content="There are so many ways to visualise data – how do we know which one to pick? Click on the coloured categories below to decide which data relationship is most important in your story, then look at the different types of chart within the category to form some initial ideas about what might work best. This list is not meant to be exhaustive, nor a wizard, but is a useful starting point for making informative and meaningful data visualisations">
+  <meta property="og:image" content="https://gramener.github.io/visual-vocabulary-vega/assets/full-mix.png">
+
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -89,6 +105,7 @@
         <div><a class="text-muted" href="https://twitter.com/PratapVardhan">Pratap Vardhan | @PratapVardhan</a></div>
         <div class="font-weight-bolder">CREDITS</div>
         <div><a class="text-muted" href="https://vega.github.io/">Vega Authors & Community</a>, <a class="text-muted" href="https://gramener.com/">Gramener</a></div>
+        <div><a class="text-muted" href="https://gramener.github.io/visual-vocabulary-vega/">https://gramener.github.io/visual-vocabulary-vega/</a></div>
       </div>
       <div class="col col-12 col-md-4">
         <div class="font-weight-bolder">INSPIRED BY</div>
