--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
         <div class="font-weight-bolder">CREDITS</div>
         <div><a class="text-muted" href="https://vega.github.io/">Vega Authors & Community</a>, <a class="text-muted" href="https://gramener.com/">Gramener</a></div>
         <div><a class="text-muted" href="https://gramener.github.io/visual-vocabulary-vega/">https://gramener.github.io/visual-vocabulary-vega/</a></div>
+        <div><a class="text-muted" href="https://github.com/gramener/visual-vocabulary-vega/">https://github.com/gramener/visual-vocabulary-vega/</a></div>
       </div>
       <div class="col col-12 col-md-4">
         <div class="font-weight-bolder">INSPIRED BY</div>
