--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <link rel="shortcut icon" href="favicon.ico"/>
   <title>Visual Vocabulary ft. Vega</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
