--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
   <meta property="og:image" content="https://gramener.github.io/visual-vocabulary-vega/assets/full-mix.png">
 
   <link rel="stylesheet" href="css/style.css">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-135627304-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-135627304-2');
+  </script>
 </head>
 <body>
   <div class="main"></div>
@@ -119,7 +127,7 @@
   </script>
   <!-- templates -->
   <script src="https://cdn.jsdelivr.net/npm/underscore@1.9.1/underscore.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vega@5.0.0-rc3/build/vega.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vega@5.0.0/build/vega.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vega-tooltip@0.16.0/build/vega-tooltip.min.js"></script>
   <script src="script.js"></script>
 </body></html>
